Adding a few obs dependencies regarding graphics hooking and dll injecting. Also adding a few obs-studio source files since these aren't filled with dependencies and can be used with little to no changes. Finally, adding the GNU license declaration

--- a/CaptureLib/CaptureLib.vcxproj.filters
+++ b/CaptureLib/CaptureLib.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClInclude Include="src\utils\WindowsUtils.h">
       <Filter>Header Files\utils</Filter>
     </ClInclude>
+    <ClInclude Include="src\obs\funchook.h">
+      <Filter>Header Files\obs</Filter>
+    </ClInclude>
+    <ClInclude Include="src\obs\graphics-hook-info.h">
+      <Filter>Header Files\obs</Filter>
+    </ClInclude>
+    <ClInclude Include="src\obs\inject-library.h">
+      <Filter>Header Files\obs</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Capture.cpp">
@@ -43,6 +52,12 @@
     </ClCompile>
     <ClCompile Include="src\utils\WindowsUtils.cpp">
       <Filter>Source Files\utils</Filter>
+    </ClCompile>
+    <ClCompile Include="src\obs\funchook.c">
+      <Filter>Source Files\obs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\obs\inject-library.c">
+      <Filter>Source Files\obs</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
