--- a/CaptureLib/CaptureLib.vcxproj
+++ b/CaptureLib/CaptureLib.vcxproj
@@ -150,11 +150,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\obs\funchook.h" />
+    <ClInclude Include="src\obs\graphics-hook-info.h" />
+    <ClInclude Include="src\obs\inject-library.h" />
     <ClInclude Include="src\obs\obfuscate.h" />
     <ClInclude Include="src\utils\WindowsUtils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Capture.cpp" />
+    <ClCompile Include="src\obs\funchook.c" />
+    <ClCompile Include="src\obs\inject-library.c" />
     <ClCompile Include="src\obs\obfuscate.c" />
     <ClCompile Include="src\utils\WindowsUtils.cpp" />
   </ItemGroup>
