--- a/CaptureLib/CaptureLib.vcxproj.filters
+++ b/CaptureLib/CaptureLib.vcxproj.filters
@@ -25,6 +25,18 @@
     <Filter Include="Source Files\utils">
       <UniqueIdentifier>{778bf8e1-1ac9-48d3-86b1-2c6c80bcb206}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\obs\ipc-util">
+      <UniqueIdentifier>{6eb9d81f-6327-4cd0-892b-8117074be1d0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\obs\ipc-util">
+      <UniqueIdentifier>{7447201c-01f7-493f-8b3f-6f6db574f20b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\capture_engine">
+      <UniqueIdentifier>{a02ca756-1c53-4168-8979-c0c2888ddc2f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\capture_engine">
+      <UniqueIdentifier>{76c6fbc3-188d-4c1c-bc3c-59fee2a9a672}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\obs\obfuscate.h">
@@ -51,6 +63,27 @@
     <ClInclude Include="src\GraphicsHook.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\obs\ipc-util\pipe.h">
+      <Filter>Header Files\obs\ipc-util</Filter>
+    </ClInclude>
+    <ClInclude Include="src\obs\ipc-util\pipe-windows.h">
+      <Filter>Header Files\obs\ipc-util</Filter>
+    </ClInclude>
+    <ClInclude Include="src\capture_engine\ICaptureEngine.h">
+      <Filter>Header Files\capture_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\capture_engine\ICaptureHook.h">
+      <Filter>Header Files\capture_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\capture_engine\CaptureData.h">
+      <Filter>Header Files\capture_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\capture_engine\CaptureCommon.h">
+      <Filter>Header Files\capture_engine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\capture_engine\WindowCapture.h">
+      <Filter>Header Files\capture_engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Capture.cpp">
@@ -76,6 +109,15 @@
     </ClCompile>
     <ClCompile Include="src\GraphicsHook.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\obs\ipc-util\pipe-windows.c">
+      <Filter>Source Files\obs\ipc-util</Filter>
+    </ClCompile>
+    <ClCompile Include="src\capture_engine\CaptureData.cpp">
+      <Filter>Source Files\capture_engine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\capture_engine\WindowCapture.cpp">
+      <Filter>Source Files\capture_engine</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
